--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+         <link rel="stylesheet" type="text/css" href="styles.css">
         <meta charset="UTF-8">
         <title>Profile Radi Markova</title>
     </head>
@@ -20,7 +21,7 @@
         <p>
             Glad to have you on my site!
         </p>
-<a href="http://www.nipponham.co.jp/files/topics/18678_ext_06_0.jpg" target="_blank" title="Bento Lunch">
+<a href="http://www.nationalgeographic.bg/files/img/5899348d493e54a2edde7ce2ad1899df_680x_iStock-627281636.jpg" target="_blank" title="Bento Lunch">
             <img src="http://www.nationalgeographic.bg/files/img/5899348d493e54a2edde7ce2ad1899df_680x_iStock-627281636.jpg" width="300" alt="A photo of a Bento lunch">
         </a>
         
