--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <p>My links:</p>
 
         <ul>
-            <li>FB</li>
-            <li>LIn</li>
+            <li>FB <a href="https://htmlcolorcodes.com/"> push</a> </li>
+            <li>LIn <a href="https://medium.com/"> be brave</a></li>
             <li>T</li>
         </ul>
 
